--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,8 +16,13 @@
       }
     }
 
-    div.header__img img {
-      border-radius: @x-sml;
+    div.header__img {
+      width: 100%;
+
+      img {
+        border-radius: @x-sml;
+        width: 100%;
+      }
     }
 
   }
